# aquavena

./: .gitignore  README.md  pyproject.toml
.github/workflows/: site.yml
benchmark/: .gitignore  ACCESSIBILITY_BENCHMARK.md  Taskfile.yml
benchmark/data/: benchmark.duckdb  claude_usage.json  commit_graph.gexf  commit_semantics.json  historical_audits.json  historical_scores.json  html_validation.json  privacy_audit.json  site_lines.json
benchmark/quarto/: db-schema.dot  report.qmd
benchmark/scripts/: analyze_commits.py  audit_html.sh  audit_privacy.mjs  audit_privacy.sh  compute_site_lines.sh  extract_claude_usage.py  extract_score_history.py  package.json  replay_audits.sh  replay_lighthouse.sh
scripts/: fetch_data.py
site/: .gitignore  .pa11yci.json  .pa11yrc.json  astro.config.mjs  package-lock.json  package.json  report.mjs
site/src/data/: menus.json
site/src/pages/: about.astro  cal.ics.js  feed.xml.js  index.astro
site/src/pages/cal/: [slug].ics.js
site/src/pages/feed/: [slug].xml.js
src/aquavena_sdk/: __init__.py  cli.py  models.py  scraper.py
tests/: test_menus.py  test_scraper.py
