[project]
name = "aquavena-sdk"
version = "0.1.0"
description = "SDK Python pour scraper les régimes alimentaires Aquavena (Nouvelle-Calédonie)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "adriens", email = "adrien.sales@gmail.com" }
]
keywords = ["aquavena", "nouvelle-calédonie", "menus", "régime", "scraper", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Utilities",
    "Environment :: Console",
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "rich>=15.0.0",
]

[project.urls]
Homepage   = "https://github.com/adriens/aquavena-sdk"
Repository = "https://github.com/adriens/aquavena-sdk"
Issues     = "https://github.com/adriens/aquavena-sdk/issues"

[project.scripts]
aquavena = "aquavena_sdk.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-httpx>=0.36.2",
]
